@@ -6,9 +6,10 @@ Summary:        AX.25 ham radio applications
 Group:          Applications/Communications
 #ax25ipd is BSD licensed, rest is GPLv2+
 License:        GPLv2+ and BSD
-URL:            http://www.linux-ax25.org/
-Source0:        http://www.linux-ax25.org/pub/%{name}/%{name}-@VERSION@.tar.gz
+URL:            http://linuxax25.googlecode.com/
+Source0:        http://code.google.com/p/linuxax25/downloads/detail?name=%{name}-@VERSION@.tar.gz
 BuildRoot:      %{_tmppath}/%{name}-@VERSION@-%{release}-root-%(%{__id_u} -n)
+Requires:       libstdc++, libax25 >= 1.0.0, ncurses
 
 %description
 This package provides specific user applications for hamradio that use AX.25 
@@ -25,12 +26,13 @@ Net/ROM or ROSE network protocols:
 %setup -q -n %{name}-@VERSION@
 
 %build
-%configure
+%configure --prefix=/usr --sysconfdir=/etc --localstatedir=/var
 make %{?_smp_mflags}
 
 %install
 rm -rf $RPM_BUILD_ROOT
 make install DESTDIR=$RPM_BUILD_ROOT
+make installconf DESTDIR=$RPM_BUILD_ROOT
 
 #don't include these twice
 rm -rf $RPM_BUILD_ROOT%{_docdir}/%{name}
@@ -41,12 +43,19 @@ rm -rf $RPM_BUILD_ROOT
 %files
 %defattr(-,root,root,-)
 %doc AUTHORS ChangeLog COPYING README
-%doc ax25ipd/COPYING.ax25ipd ax25ipd/HISTORY.ax25ipd ax25ipd/README.ax25ipd
-%doc ax25rtd/TODO.ax25rtd ax25rtd/README.ax25rtd
+%doc %{_docdir}/*
+%config %{_sysconfdir}/ax25/*
 %{_bindir}/*
 %{_sbindir}/*
 %{_mandir}/man?/*
 
 %changelog
+* Fri Jan 29 2011 Lee Woldanski <ve7fet@tparc.org>
+- Fixed some of the versioning output for creating files so it is correct
+- Changed configure line to put files where they belong
+- Added some dependencies
+- Added a make installconf line to install the default config files during packaging
+- Identified the config files
+
 * Sat Jun 27 2009 Ralf Baechle <ralf@linux-mips.org>
 - Initial version
